k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      containers:
        - image: docker.io/rstrazza/py-app:sha-e11d7f6
          name: py-app
          ports:
            - containerPort: 5000
              name: http-web-svc
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
