k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: py-app-prod.eks.strazza.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-app-service
            port: 
              number: 80
